@@ -79,6 +79,9 @@ Version 1.3-svn:
      (patch #605)A
    * changed the zoom hotkeys from 'z', 'x' and 'c' to '+', '-' and '0'
    * fix the completion when controlling multiple sides (bug #8101, patch #653)
+   * add a friend list in MP lobby, they will display a special icon in lobby,
+     and you can be warned when they join the lobby even when not receiving
+     lobby joins
  * WML engine
    * added prerecruit event that takes place after the unit is created but
      before it is displayed.
